force-app/main/default/objects/Pricebook2/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <label>Centro (Filial)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>