force-app/main/default/objects/Pricebook2/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <label>Cultura</label>
    <length>100</length>
    <type>Text</type>
</CustomField>