force-app/main/default/objects/Pricebook2/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <label>Canal de Distribuição</label>
    <length>100</length>
    <type>Text</type>
</CustomField>