force-app/main/default/objects/Pricebook2/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>Data Efetiva</label>
    <type>Date</type>
</CustomField>