force-app/main/default/objects/Pricebook2/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Código Externo</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>