force-app/main/default/objects/Pricebook2/fields/FinancialAddition__c.field-meta.xml
<CustomField>
    <fullName>FinancialAddition__c</fullName>
    <label>Acréscimo Financeiro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>