force-app/main/default/objects/Pricebook2/fields/FinancialDecrese__c.field-meta.xml
<CustomField>
    <fullName>FinancialDecrese__c</fullName>
    <label>Decréscimo Financeiro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>