force-app/main/default/objects/Pricebook2/fields/InitialDate__c.field-meta.xml
<CustomField>
    <fullName>InitialDate__c</fullName>
    <label>Data de Inicio</label>
    <type>Date</type>
</CustomField>