force-app/main/default/objects/Pricebook2/fields/InterestValue__c.field-meta.xml
<CustomField>
    <fullName>InterestValue__c</fullName>
    <label>Porcentagem de Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>