force-app/main/default/objects/Pricebook2/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>Data Pagamento Sugerida</label>
    <type>Date</type>
</CustomField>