force-app/main/default/objects/Pricebook2/fields/PriceList__c.field-meta.xml
<CustomField>
    <fullName>PriceList__c</fullName>
    <label>Lista de Preço</label>
    <length>50</length>
    <type>Text</type>
</CustomField>