force-app/main/default/objects/Pricebook2/fields/PriceMultiplier__c.field-meta.xml
<CustomField>
    <fullName>PriceMultiplier__c</fullName>
    <label>Multiplicidade de Preço</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>