force-app/main/default/objects/Pricebook2/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Família de Produtos</label>
    <referenceTo>ProductFamily__c</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>