force-app/main/default/objects/Pricebook2/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Região</label>
    <length>100</length>
    <type>Text</type>
</CustomField>