force-app/main/default/objects/Pricebook2/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escritório Vendas</label>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>