force-app/main/default/objects/Pricebook2/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>Organização de Vendas</label>
    <type>TextArea</type>
</CustomField>