force-app/main/default/objects/Pricebook2/fields/SalesSection__c.field-meta.xml
<CustomField>
    <fullName>SalesSection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Setor de Vendas</label>
    <referenceTo>ActivitySector__c</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>PriceBookActivitySector</relationshipName>
    <type>Lookup</type>
</CustomField>