force-app/main/default/objects/Pricebook2/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unidade</label>
    <length>3</length>
    <type>Text</type>
</CustomField>