force-app/main/default/objects/Pricebook2/recordTypes/RecordTypeId.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeId</fullName>
    <active>true</active>
    <label>Tipo de Condição</label>
</RecordType>